--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "MEAN-Stack",
-  "version": "0.0.0",
-  "scripts": {
-    "start": "node app"
-  },
-  "dependencies": {
-    "express": "~4.2.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "mongoose": "*"
-  }
+    "name": "App-Name",
+    "version": "0.0.1",
+    "scripts": {
+        "start": "node server"
+    },
+    "dependencies": {
+        "express": "~4.x",
+        "bcrypt-nodejs": "^0.0.3",
+        "method-override": "^2.2.0",
+        "morgan": "~1.0.0",
+        "errorhandler": "^1.2.0",
+        "cookie-parser": "~1.0.1",
+        "body-parser": "~1.0.0",
+        "nodemailer": "^1.2.2",
+        "mongoose": "~3.8.x",
+        "crypto": "~0.0.3",
+        "socket.io": "~1.1.0",
+        "jsonwebtoken": "~1.1.1",
+        "socketio-jwt": "~2.3.5",
+        "validator": "*"
+    }
 }
