--- a/public/config.json
+++ b/public/config.json
@@ -1,13 +1,15 @@
 {
-    "appName": "MyApp",
+    "appName": "MyApp", /* default "App" */
 
-    "showTitle": true,
+    "showTitle": true, /* default false */
 
-    "showSubTitle" : true,
+    "showSubTitle" : true, /* default false */
 
-    "titlePrefix" : " - ",
+    "titlePrefix" : " - ", /* default " - " */
 
-    "HTML5Mode": true,
+    "useErrorPage": true, /* default false */
 
-    "hashPrefix": "!"
+    "HTML5Mode": true, /* default false */
+
+    "hashPrefix": "!" /* default "" */
 }
